--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a>Show high scores</a>
+        </nav>
+        <p>Time: <span id="timer"></span></p>
     </header>
 
     <main>
-
+        <h1>Coding Quiz Challenge</h1>
+        <section id="startSection">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit ducimus doloribus corporis! Praesentium rerum tempora odio aperiam ullam optio voluptatum ratione culpa fuga consequuntur excepturi asperiores beatae velit, corporis nam!</p>
+            <button id="startButton">Start Challenge</button>
+        </section>
+        <section id="quizSection"> <!-- Questions -->
+            <h2 id="question">Question</h2>
+            <ul id="answers"> <!-- Answers -->
+            </ul>
+            <p id="result"></p> <!-- Result -->
+        </section>
+        <section id="scoreSection"></section>
     </main>
-
-    <footer>
-
-    </footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
