--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <section id="quizSection" class="column"> <!-- Questions -->
             <h2 id="question">Question</h2>
             <ul id="answers"> <!-- Answers -->
+                <li>Test one</li>
+                <li>Test two</li>
+                <li>Test three</li>
+                <li>Test four</li>
             </ul>
             <p id="result"></p> <!-- Result -->
         </section>
