Reformatted code, added shown results to answers

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
         </section>
         <section id="quizSection" class="column"> <!-- Questions -->
             <h2 id="question">Question</h2>
-            <ul id="answers"> <!-- Answers -->
-                <li>Test one</li>
-                <li>Test two</li>
-                <li>Test three</li>
-                <li>Test four</li>
+            <ul id="answers">
             </ul>
             <p id="result"></p> <!-- Result -->
         </section>
