Added top 5 high scores and some small styling changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="startSection" class="column">
             <h2>Test your coding knowledge!</h2>
             <button id="startButton">Start Challenge</button>
-            <button id="highscoresButton">Highscores</button>
+            <button id="highscoreButton">Highscores</button>
         </section>
 
         <section id="quizSection" class="column">
@@ -45,7 +45,9 @@
         </section>
 
         <section id="highscoreSection" class="column">
-            <div>High score: <span id="highscore">0</span> - <span id="highscoreInitials">-</span></div>
+            <h2>High scores:</h2>
+             <ol id="highscoreList">
+             </ol>
             <button id="homeButton">Home</button>
         </section>
     </main>
