--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <h2>High scores:</h2>
              <ol id="highscoreList">
              </ol>
-            <button id="homeButton">Home</button>
+             
+             <div><button id="homeButton">Home</button></div>
+            
         </section>
     </main>
 
