Added comments and fixed a bug

--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@
         </section>
 
         <section id="quizSection" class="column">
-            <h2 id="question">Question</h2>
-            <ul id="answers">
-                <li>Answer 1</li>
-                <li>Answer 2</li>
-                <li>Answer 3</li>
-                <li>Answer 4</li>
-            </ul>
+            <h2 id="question"></h2>
+            <ul id="answers"></ul>
             <p id="result"></p>
         </section>
 
@@ -46,10 +41,8 @@
 
         <section id="highscoreSection" class="column">
             <h2>High scores:</h2>
-             <ol id="highscoreList">
-             </ol>
-             
-             <div><button id="homeButton">Home</button></div>
+             <ol id="highscoreList"></ol>
+             <button id="homeButton">Home</button>
             
         </section>
     </main>
